[gd_scene load_steps=6 format=3 uid="uid://bjwmjcpyoxkij"]

[ext_resource type="Script" path="res://actors/enemy_desk.gd" id="1_k0kn2"]
[ext_resource type="Script" path="res://node_types/enemy_status.gd" id="2_6tsru"]
[ext_resource type="PackedScene" uid="uid://beey0ruqti3x2" path="res://character_models/desk.blend" id="2_yio57"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vit8j"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bptlv"]

[node name="EnemyDesk" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 15
axis_lock_linear_y = true
motion_mode = 1
script = ExtResource("1_k0kn2")

[node name="EnemyStatus" type="Node" parent="."]
script = ExtResource("2_6tsru")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_vit8j")

[node name="Desk" parent="." instance=ExtResource("2_yio57")]

[node name="WanderTurnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="LineOfSight" type="RayCast3D" parent="."]
collision_mask = 11
debug_shape_custom_color = Color(0.517647, 0.309804, 0.0980392, 1)

[node name="AggroRange" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="AggroRange"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("CylinderShape3D_bptlv")

[connection signal="timeout" from="WanderTurnTimer" to="." method="_on_wander_turn_timer_timeout"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_aggro_range_body_exited"]
